[gd_scene load_steps=16 format=3 uid="uid://dm6txy6gh68ay"]

[ext_resource type="Script" uid="uid://0ol8mjt4tfgd" path="res://settings_menu.gd" id="1_d0eu6"]
[ext_resource type="Texture2D" uid="uid://cqvn7miwjwgmm" path="res://titleScren.png" id="1_mlw3h"]
[ext_resource type="FontFile" uid="uid://di60lbmo8bljp" path="res://munro.ttf" id="3_fiqec"]

[sub_resource type="ImageTexture" id="ImageTexture_lquwl"]

[sub_resource type="ImageTexture" id="ImageTexture_7mycd"]

[sub_resource type="ImageTexture" id="ImageTexture_272bh"]

[sub_resource type="ImageTexture" id="ImageTexture_5vw27"]

[sub_resource type="ImageTexture" id="ImageTexture_kek77"]

[sub_resource type="ImageTexture" id="ImageTexture_4c57u"]

[sub_resource type="ImageTexture" id="ImageTexture_efxa6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bvp3"]
bg_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="Theme" id="Theme_1bvp3"]
default_font = ExtResource("3_fiqec")
OptionButton/constants/arrow_margin = 0
OptionButton/constants/h_separation = 0
OptionButton/font_sizes/font_size = 10
PopupMenu/font_sizes/font_size = 10
PopupMenu/icons/checked = SubResource("ImageTexture_lquwl")
PopupMenu/icons/checked_disabled = SubResource("ImageTexture_7mycd")
PopupMenu/icons/radio_checked = SubResource("ImageTexture_272bh")
PopupMenu/icons/radio_checked_disabled = SubResource("ImageTexture_5vw27")
PopupMenu/icons/radio_unchecked = SubResource("ImageTexture_kek77")
PopupMenu/icons/radio_unchecked_disabled = SubResource("ImageTexture_4c57u")
PopupMenu/icons/unchecked = SubResource("ImageTexture_efxa6")
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource("StyleBoxFlat_1bvp3")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_272bh"]

[sub_resource type="ImageTexture" id="ImageTexture_1bvp3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mlw3h"]

[node name="SettingsMenu" type="Node2D"]
process_mode = 1
texture_filter = 1
script = ExtResource("1_d0eu6")

[node name="BG" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(160, 90)
texture = ExtResource("1_mlw3h")

[node name="ResolutionButton" type="OptionButton" parent="."]
offset_left = 109.0
offset_top = 79.0
offset_right = 207.0
offset_bottom = 111.0
theme = SubResource("Theme_1bvp3")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_272bh")
theme_override_icons/arrow = SubResource("ImageTexture_1bvp3")
flat = true
alignment = 1
icon_alignment = 1
selected = 2
fit_to_longest_item = false
item_count = 6
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 6
popup/item_1/text = "1600 x 900"
popup/item_1/id = 5
popup/item_2/text = "1280 x 720"
popup/item_2/id = 4
popup/item_3/text = "960 x 540"
popup/item_3/id = 3
popup/item_4/text = "640 x 360"
popup/item_4/id = 2
popup/item_5/text = "320 x 180"
popup/item_5/id = 1

[node name="BackButton" type="Button" parent="."]
offset_left = 136.0
offset_top = 135.0
offset_right = 181.0
offset_bottom = 167.0
theme = SubResource("Theme_1bvp3")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_mlw3h")
text = "Back"
flat = true

[connection signal="item_selected" from="ResolutionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
